Publishing to gh-pages

--- a/warframe-builds/index.html
+++ b/warframe-builds/index.html
@@ -35,7 +35,7 @@
 	    <meta property="og:title" content="Warframe Builds" />
 <meta property="og:description" content="Useful Warframe guides, warframe and weapon builds, Warframe resource farming guides and latest news about Warframe updates." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/warframe-builds/" />
+<meta property="og:url" content="http://warframeblog.github.io/warframeblog/warframe-builds/" />
 
 
 
@@ -88,19 +88,19 @@
     <div class="container">
         <div class="navbar-header">
             <div class="title-logo-wrapper">
-                <a class="navbar-brand" href="http://example.org/" title="Warframe Blog">
+                <a class="navbar-brand" href="http://warframeblog.github.io/warframeblog" title="Warframe Blog">
                     <p>Warframe Blog</p>
                 </a>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="main-navigation">
             <ul class="nav navbar-nav navbar-right" id="menu-main-menu">
-                <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="News" href="http://example.org/warframe-news/">News</a></li>
-                <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Guides" href="http://example.org/guides/">Guides</a></li>
-                <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Farming" href="http://example.org/farming/">Farming</a></li>
-                <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children dropdown"><a class="dropdown-toggle" title="Builds" href="http://example.org/builds/" data-toggle="dropdown" aria-haspopup="true">Builds <span class="caret"></span></a>
+                <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="News" href="http://warframeblog.github.io/warframeblogwarframe-news/">News</a></li>
+                <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Guides" href="http://warframeblog.github.io/warframeblogguides/">Guides</a></li>
+                <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Farming" href="http://warframeblog.github.io/warframeblogfarming/">Farming</a></li>
+                <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children dropdown"><a class="dropdown-toggle" title="Builds" href="http://warframeblog.github.io/warframeblogbuilds/" data-toggle="dropdown" aria-haspopup="true">Builds <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li class="menu-item menu-item-type-post_type menu-item-object-page"><a title="Warframe Builds" href="http://example.org/warframe-builds/">Warframe Builds</a></li>
+                        <li class="menu-item menu-item-type-post_type menu-item-object-page"><a title="Warframe Builds" href="http://warframeblog.github.io/warframeblogwarframe-builds/">Warframe Builds</a></li>
                     </ul>
                 </li>
             </ul>
@@ -364,7 +364,7 @@
         <hr/>
         <div class="hestia-bottom-footer-content">
             <div class="hestia-bottom-footer-content">
-                <div class="copyright pull-left"><a href="http://example.org/">Warframe Blog</a> has no official link with Digital Extremes or Warframe, we are just a fan site.</div>
+                <div class="copyright pull-left"><a href="http://warframeblog.github.io/warframeblog">Warframe Blog</a> has no official link with Digital Extremes or Warframe, we are just a fan site.</div>
             </div>
         </div>
     </div>
