Publishing to gh-pages

--- a/404.html
+++ b/404.html
@@ -105,19 +105,19 @@
     <div class="container">
         <div class="navbar-header">
             <div class="title-logo-wrapper">
-                <a class="navbar-brand" href="http://warframeblog.github.io/warframeblog" title="Warframe Blog">
+                <a class="navbar-brand" href="http://warframeblog.github.io/warframeblog/" title="Warframe Blog">
                     <p>Warframe Blog</p>
                 </a>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="main-navigation">
             <ul class="nav navbar-nav navbar-right" id="menu-main-menu">
-                <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="News" href="http://warframeblog.github.io/warframeblogwarframe-news/">News</a></li>
-                <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Guides" href="http://warframeblog.github.io/warframeblogguides/">Guides</a></li>
-                <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Farming" href="http://warframeblog.github.io/warframeblogfarming/">Farming</a></li>
-                <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children dropdown"><a class="dropdown-toggle" title="Builds" href="http://warframeblog.github.io/warframeblogbuilds/" data-toggle="dropdown" aria-haspopup="true">Builds <span class="caret"></span></a>
+                <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="News" href="http://warframeblog.github.io/warframeblog/warframe-news/">News</a></li>
+                <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Guides" href="http://warframeblog.github.io/warframeblog/guides/">Guides</a></li>
+                <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Farming" href="http://warframeblog.github.io/warframeblog/farming/">Farming</a></li>
+                <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children dropdown"><a class="dropdown-toggle" title="Builds" href="http://warframeblog.github.io/warframeblog/builds/" data-toggle="dropdown" aria-haspopup="true">Builds <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li class="menu-item menu-item-type-post_type menu-item-object-page"><a title="Warframe Builds" href="http://warframeblog.github.io/warframeblogwarframe-builds/">Warframe Builds</a></li>
+                        <li class="menu-item menu-item-type-post_type menu-item-object-page"><a title="Warframe Builds" href="http://warframeblog.github.io/warframeblog/warframe-builds/">Warframe Builds</a></li>
                     </ul>
                 </li>
             </ul>
@@ -140,7 +140,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<p class="sub-title">Maybe it’s out there, somewhere...</p>
-						<p class="sub-title">You can always find insightful stories on our <a href="http://warframeblog.github.io/warframeblog" title="Warframe Blog">homepage</a>.</p>
+						<p class="sub-title">You can always find insightful stories on our <a href="http://warframeblog.github.io/warframeblog/" title="Warframe Blog">homepage</a>.</p>
 					</div>
 				</div>
 				<div class="row">
