--- a/the-end-of-the-fucking-world-review/index.html
+++ b/the-end-of-the-fucking-world-review/index.html
@@ -83,19 +83,19 @@
     <div class="container">
         <div class="navbar-header">
             <div class="title-logo-wrapper">
-                <a class="navbar-brand" href="http://warframeblog.github.io/warframeblog" title="Warframe Blog">
+                <a class="navbar-brand" href="http://warframeblog.github.io/warframeblog/" title="Warframe Blog">
                     <p>Warframe Blog</p>
                 </a>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="main-navigation">
             <ul class="nav navbar-nav navbar-right" id="menu-main-menu">
-                <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="News" href="http://warframeblog.github.io/warframeblogwarframe-news/">News</a></li>
-                <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Guides" href="http://warframeblog.github.io/warframeblogguides/">Guides</a></li>
-                <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Farming" href="http://warframeblog.github.io/warframeblogfarming/">Farming</a></li>
-                <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children dropdown"><a class="dropdown-toggle" title="Builds" href="http://warframeblog.github.io/warframeblogbuilds/" data-toggle="dropdown" aria-haspopup="true">Builds <span class="caret"></span></a>
+                <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="News" href="http://warframeblog.github.io/warframeblog/warframe-news/">News</a></li>
+                <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Guides" href="http://warframeblog.github.io/warframeblog/guides/">Guides</a></li>
+                <li class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Farming" href="http://warframeblog.github.io/warframeblog/farming/">Farming</a></li>
+                <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children dropdown"><a class="dropdown-toggle" title="Builds" href="http://warframeblog.github.io/warframeblog/builds/" data-toggle="dropdown" aria-haspopup="true">Builds <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li class="menu-item menu-item-type-post_type menu-item-object-page"><a title="Warframe Builds" href="http://warframeblog.github.io/warframeblogwarframe-builds/">Warframe Builds</a></li>
+                        <li class="menu-item menu-item-type-post_type menu-item-object-page"><a title="Warframe Builds" href="http://warframeblog.github.io/warframeblog/warframe-builds/">Warframe Builds</a></li>
                     </ul>
                 </li>
             </ul>
@@ -113,7 +113,7 @@
                     <span xmlns:v="http://rdf.data-vocabulary.org/#">
                       
                       
-                      <span typeof="v:Breadcrumb"><a href="http://warframeblog.github.io/warframeblog" rel="v:url" property="v:title">Warframe Blog</a> » 
+                      <span typeof="v:Breadcrumb"><a href="http://warframeblog.github.io/warframeblog/" rel="v:url" property="v:title">Warframe Blog</a> » 
                       <span rel="v:child" typeof="v:Breadcrumb"><a href="/farming" title="Farming" rel="v:url" property="v:title">Farming</a> » 
                       <span class="breadcrumb_last">The End of the Fucking World Review (Spoiler-Free review)</span>
                     </span>
@@ -263,7 +263,7 @@
         <hr/>
         <div class="hestia-bottom-footer-content">
             <div class="hestia-bottom-footer-content">
-                <div class="copyright pull-left"><a href="http://warframeblog.github.io/warframeblog">Warframe Blog</a> has no official link with Digital Extremes or Warframe, we are just a fan site.</div>
+                <div class="copyright pull-left"><a href="http://warframeblog.github.io/warframeblog/">Warframe Blog</a> has no official link with Digital Extremes or Warframe, we are just a fan site.</div>
             </div>
         </div>
     </div>
